tests/machine/x/c/avg_builtin.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/avg_builtin.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/avg_builtin.c:26:17: error: subscripted value is neither array nor pointer nor vector
   26 |     tmp2 += tmp1[i3];
      |                 ^

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:47Z
