tests/machine/x/c/avg_builtin.c
// Generated by Mochi compiler v0.10.24 on 2025-07-13T03:59:03Z
#include <stdio.h>
#include <stdlib.h>

int main() {
  {
    int first = 1;
    int tmp1[] = {1, 2, 3};
    int tmp2 = 0;
    for (int i3 = 0; i3 < 3; i3++) {
      tmp2 += tmp1[i3];
    }
    double tmp4 = tmp2 / (double)3;
    if (!first)
      printf(" ");
    printf("%.16g", tmp4);
    first = 0;
    printf("\n");
  }
  return 0;
}
